--- a/index.html
+++ b/index.html
@@ -213,12 +213,12 @@
               <h5 style="color:#fff">Je suis <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
               <div class="caption">
                 <!-- Utilisation de balises <p> pour le texte descriptif avec une taille personnalisée -->
-                <p style="font-size: 14px; color: #fff; line-height: 1;">
+                <p style="font-size: 16px; color: #fff; line-height: 1;">
                     Passionné par la donnée et son impact stratégique, j’accompagne les entreprises dans la modernisation de leur écosystème data, de l’ingestion des données à leur valorisation.
                 </p>
-                <p style="font-size: 14px; color: #fff; line-height: 1;">Mes expertises :</p>
+                <p style="font-size: 16px; color: #fff; line-height: 1;">Mes expertises :</p>
                   <!-- Liste des expertises avec une taille de texte ajustée -->
-                <ul style=" color: #fff; font-size: 16px; line-height: 1; padding-left: 20px;">
+                <ul style=" list-style-type: disc; color: #fff; font-size: 16px; line-height: 1; padding-left: 20px;">
                     <li> Optimisation des processus métiers grâce à une data gouvernée et exploitable.</li>
                     <li> Migration vers le Cloud & Modernisation SI pour plus d’agilité et de performance.</li>
                     <li> Data Engineering & Pipelines : Développement de flux ETL performants et automatisés.</li>
