--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
   <!-- Custom Styles-->
   <link rel="stylesheet" href="/assets/css/style.css" />
-  <title>Varad Bhogayata | Software Developer</title>
+  <title>Kaouther Saoula | Data Engineer </title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126939217-2"></script>
@@ -35,17 +35,13 @@
   <!-- Open Graph-->
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Varad Bhogayata | Software Developer" />
+  <meta property="og:title" content="Kaouther Saoula | Data Engineer " />
   <meta property="og:description" content="Software Developer" />
-  <meta property="og:url" content="https://varadbhogayata.github.io/" />
+  <meta property="og:url" content="https://Kaouther86.github.io/" />
   <meta property="og:site_name" content="Kaouther Saoula  | Data Engineer" />
   <meta property="article:publisher" content="https://Kaouther86.github.io/" />
   <meta property="og:image" content="https://Kaouther86.github.io/examples/preview.JPG" />
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@varad_bhogayata" />
-  <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Humane" />
-  <meta name="twitter:description" content="Data Engineer" />
+
 
   <meta name="author" content="Kaouther Saoula" />
   <meta name="description" content="Software Developer with a passion for backend development and artificial intelligence." />
@@ -147,7 +143,8 @@
         <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open Varad's resume in a new tab" href="https://varadbhogayata.github.io/assets/resume/Varad_Bhogayata_Resume.pdf" target="_blank"
+       <a aria-label="Open Varad's resume in a new tab" href="https://varadbhogayata.github.io/assets/resume/Varad_Bhogayata_Resume.pdf" target="_blank" 
+       
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>CV</span></a>  
       </li>
     </ul>
@@ -158,8 +155,8 @@
     <a aria-label="Toggle visibility of the mobile navbar" href="#" data-activates="slide-out"
       class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <div class="name-title">
-      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Varad
-        Bhogayata</a><span class="black-text">Data Engineer </span>
+      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Kaouther Saoula
+        </a><span class="black-text">Data Engineer </span>
     </div>
   </nav>
 
@@ -194,7 +191,8 @@
       </li>
       <li class="bold">
         <a aria-label="Open Varad's Resume in a new tab"
-          href="https://drive.google.com/file/d/1B6MZ1z0-7NsefC3Lm_q-uhib28MTqpE9/view?usp=sharing" target="_blank"
+          
+          target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>CV</span></a>
       </li>
     </ul>
@@ -210,7 +208,7 @@
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
               <h2> <span class="teal">Kaouther Saoula</span></h2>
-              <h5 style="color:#fff">Je suis <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
+              <h5 style="color:#fff">Je suis <span class="typing" style="font-weight: 300; color:#4d3500"></span></h5>
               <div class="caption">
                 <!-- Utilisation de balises <p> pour le texte descriptif avec une taille personnalisée -->
                 <p style="font-size: 16px; color: #fff; line-height: 1;">
@@ -500,7 +498,7 @@
             data-position="top" data-tooltip="View Varad on GitHub"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
               aria-label="Varad on Github" href="https://github.com/Kaouther86" class="hoverline"
-              target="_blank">github.com/varadbhogayata</a></a>
+              target="_blank">github.com/Kaouther86</a></a>
         </p>
         <p>
           <a aria-label="View Varad on LinkedIn" href="http://www.linkedin.com/in/kaouther-saoula-2096531a6" target="_blank"
