--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
         <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark teal-text"><i
             class="mdi-content-mail small"></i><span>Contact</span></a>
       </li>
-
-      <li class="bold">
+ 
+      <!-- <li class="bold"> -->
         <!--
         ICONS:
         1. mdi-action-description
@@ -143,10 +143,16 @@
         <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-       <a aria-label="Open Varad's resume in a new tab" href="https://varadbhogayata.github.io/assets/resume/Varad_Bhogayata_Resume.pdf" target="_blank" 
-       
+       <!--<a aria-label="Open Varad's resume in a new tab" href="https://varadbhogayata.github.io/assets/resume/Varad_Bhogayata_Resume.pdf" 
+        target="_blank"       
+        class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>CV</span></a>  -->
+       <!--
+        <a aria-label="Open Varad's resume in a new tab" 
+        target="_blank"       
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>CV</span></a>  
-      </li>
+
+      </li> 
+    -->
     </ul>
   </nav>
 
@@ -189,12 +195,13 @@
         <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark teal-text"><i
             class="mdi-content-mail small"></i><span>Contact</span></a>
       </li>
-      <li class="bold">
+     <!---<li class="bold">
         <a aria-label="Open Varad's Resume in a new tab"
           
           target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>CV</span></a>
       </li>
+    -->
     </ul>
   </nav>
 
@@ -208,7 +215,7 @@
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
               <h2> <span class="teal">Kaouther Saoula</span></h2>
-              <h5 style="color:#fff">Je suis <span class="typing" style="font-weight: 300; color:#4d3500"></span></h5>
+              <h5 style="color:#fff">Je suis <span class="typing" style="font-weight: 300; color:#b1821d"></span></h5>
               <div class="caption">
                 <!-- Utilisation de balises <p> pour le texte descriptif avec une taille personnalisée -->
                 <p style="font-size: 16px; color: #fff; line-height: 1;">
@@ -515,7 +522,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Data Engineer ", " Consultante en business Intelligence MSBI"],
+      strings: [" Data Engineer ",  " Analytics Engineer " , " Consultante en business Intelligence MSBI"],
       loop: true,
       typeSpeed: 80,
       backSpeed: 40
