--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
               <h2> <span class="teal">Kaouther Saoula</span></h2>
-              <h5 style="color:#fff">Je suis <span class="typing" style="font-weight: 300; color:#b1821d"></span></h5>
+              <h5 style="color:#fff">Je suis <span class="typing" style="font-weight: 300; color:#d1b579"></span></h5>
               <div class="caption">
                 <!-- Utilisation de balises <p> pour le texte descriptif avec une taille personnalisée -->
                 <p style="font-size: 16px; color: #fff; line-height: 1;">
@@ -456,9 +456,9 @@
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a  target="_blank" class="teal-text hoverline">Université de Technologies de Troyes</a></span>
+                  <span class="card-title"><a  target="_blank" class="teal-text hoverline">Université de Technologies de Troyes UTT</a></span>
                 </p>
-                <p class="brown-text">Troyes </p>
+                <p class="brown-text">Troyes, France </p>
                 <p>
                   <b>Master TICOR: </b>Master Management des connaissances et des réseaux    
                  
@@ -466,6 +466,8 @@
 
               </div>
             </div>
+          </div>
+          <div class="row">
             <div class="col s12 m6 l6">
               <div class="card">
                 <div class="card-content">
@@ -478,8 +480,9 @@
                   </p>
                 </div>
               </div>
+              </div>
           </div>
-        </div>
+        
       </div>
     </section>
 
