--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
               <h2> <span class="teal">Kaouther Saoula</span></h2>
-              <h5 style="color:#fff">Je suis <span class="typing" style="font-weight: 300; color:#d1b579"></span></h5>
+              <h5 style="color:#fff">Je suis <span class="typing" style="font-weight: 300; color:#fff"></span></h5>
               <div class="caption">
                 <!-- Utilisation de balises <p> pour le texte descriptif avec une taille personnalisée -->
                 <p style="font-size: 16px; color: #fff; line-height: 1;">
