--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
       <h3 class="page-title white-text teal">Projets </h3>
       <div class="container">
         <div class="row">
-
+<!--
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
@@ -324,9 +324,10 @@
                   A music streaming web app based on Django
                 </p>
               </div>
-              <div class="card-reveal">
+              <div class="card-reveal"> -->
                 <!-- TODO: change this -- only close button -->
                 <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
+             <!--
                 <span class="card-title grey-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
@@ -351,7 +352,7 @@
               </div>
             </div>
           </div>
-
+        -->
         </div>
       </div>
     </section>
@@ -366,13 +367,13 @@
             <h4 class="brown-text light">Languages and Databases</h4>
             <div class="row text-center">
               <div class="col s4 m2">
+                <img alt="" src="/assets/img/SQL.png" class="responsive-img" />Python
+              </div>
+              <div class="col s4 m2">
                 <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/html5-300x300.jpg" class="responsive-img" />HTML5
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/css3-300x300.jpg" class="responsive-img" />CSS3
+                <img alt="" src="/assets/img/sqlserver.png class="responsive-img" />HTML5
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />MySQL
@@ -380,9 +381,7 @@
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/postgresql-logo.png" class="responsive-img" />PostgreSQL
               </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/shell-logo-1-300x300.jpg" class="responsive-img" />Shell Scripting
-              </div>
+
             </div>
           </div>
         </div>
@@ -395,16 +394,16 @@
             <h4 class="brown-text light">Other</h4>
             <div class="row text-center">
 
-
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/powerbi.png" class="responsive-img" />AWS
+              </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/git.png" class="responsive-img" />Git
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/aws.png" class="responsive-img" />AWS
               </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/heroku.png" class="responsive-img" />Heroku
-              </div>
+              
             </div>
           </div>
         </div>
