--- a/index.html
+++ b/index.html
@@ -367,13 +367,13 @@
             <h4 class="brown-text light">Languages and Databases</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/SQL.png" class="responsive-img" />Python
+                <img alt="" src="/assets/images/SQL.png" class="responsive-img" />Python
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/sqlserver.png class="responsive-img" />HTML5
+                <img alt="" src="/assets/images/sqlserver.png class="responsive-img" />HTML5
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />MySQL
@@ -395,7 +395,7 @@
             <div class="row text-center">
 
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/powerbi.png" class="responsive-img" />AWS
+                <img alt="" src="/assets/images/powerbi.png" class="responsive-img" />POWER BI 
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/git.png" class="responsive-img" />Git
