--- a/index.html
+++ b/index.html
@@ -367,16 +367,19 @@
             <h4 class="brown-text light">Languages and Databases</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/SQL.png" class="responsive-img" />Python
+                <img alt="" src="/assets/img/SQL.png" class="responsive-img" /> SQL
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/BigQuery.png" class="responsive-img" />Python
+                <img alt="" src="/assets/img/Snowflake.png" class="responsive-img" />Snowflake
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/BigQuery.png" class="responsive-img" />BigQuery
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/sqlserver.png class="responsive-img" />HTML5
+                <img alt="" src="/assets/img/sqlserver.png" class="responsive-img" />SqlServer
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />MySQL
@@ -398,7 +401,7 @@
             <div class="row text-center">
 
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/powerbi.png" class="responsive-img" />POWER BI 
+                <img alt="" src="/assets/img/powerBI.png" class="responsive-img" />POWER BI 
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/git.png" class="responsive-img" />Git
@@ -407,9 +410,11 @@
                 <img alt="" src="/assets/img/aws.png" class="responsive-img" />AWS
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/Azure.png" class="responsive-img" />AWS
+                <img alt="" src="/assets/img/Azure.png" class="responsive-img" />Azure
               </div>
-              
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/GCP.png" class="responsive-img" />GCP
+              </div>
             </div>
           </div>
         </div>
